bg color for Todo component

--- a/2-assignment-20240226/package.json
+++ b/2-assignment-20240226/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2-assignment-20240226",
+  "name": "assignment-1-20240221",
   "version": "0.1.0",
   "private": true,
   "scripts": {
